# acture

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  acture-sandbox-initial.md  codemods-cli-polish.md  config.json  eslint-require-param-describe.md  mcp-pin-spec-version.md  telemetry-debut.md  undo-debut.md  v1-12-test-property.md
.github/workflows/: ci.yml  release.yml
docs/: ai-codemod-recipe.md  fresh-agent-test-results.md  hand-written-sandbox.md  hand-written-telemetry.md  hand-written-test-property.md  hand-written-undo.md  implementation_plan.md  next_session.md  phase-1-acceptance.md  phase-1-reflection.md  phase-2-reflection.md  phase-3-reflection.md  phase-4-reflection.md  positioning.md  redesign_takeaways.md  reference_notes.md  roadmap.md  v1_1-reflection.md  v1_10-reflection.md  v1_11-reflection.md  v1_12-reflection.md  v1_2-reflection.md  v1_3-reflection.md  v1_4-reflection.md  v1_9-reflection.md  v1_plan.md
docs/backlog/: codemods-polish-and-tier-mirror.md
docs/research/: acture_research_4 -- Transitional APIs and Codemod Tooling for Command-Dispatch Migration in TypeScript:React.md  acture_research_7 -- PHP Tooling for a Command-Dispatch Architecture- A Reference Stack and Migration Guide.md  acture_research_8 -- Command Dispatch Architecture in C# : .NET — A Tooling Report for Skill-Building Agents.md  acture_research_9 -- Extensions and Plugin Systems.md  (+1 more)
python/: README.md  pyproject.toml
python/acture/: __init__.py
scripts/: sync-python-version.mjs
(+92 files in other folders)
